Fix bottom padding on mobile

--- a/web/src/css/global/navbar.scss
+++ b/web/src/css/global/navbar.scss
@@ -20,7 +20,7 @@
         bottom: auto;
         width: auto;
         right: 0;
-        padding-block: 0;
+        padding-top: 0;
         height: 100%;
     }
     &.closed {
